<resources>
    <string name="app_name">Koora Alyawm</string>
    <string name="sing_in">Sign In</string>
    <string name="sing_up">Sign Up</string>

    <!-- Group -->
    <string name="create_new_group">Create New Group</string>
    <string name="create_group">Create</string>
    <string name="group_name">group name</string>
    <string name="protect_group">Protect Group</string>
    <string name="hint_lock_group">Only people they have password will join group</string>
    <string name="password">Password</string>
    <string name="hint_enter_group_name">Group Name</string>


    <!-- Game -->

    <string name="create_new_game">Create New Match</string>
    <string name="stadium_name">Stadium name</string>
    <string name="stadium_location">Location google map</string>
    <string name="Required_number">Number \u0020</string>
    <string name="Fees">Fees \u0020</string>
    <string name="canceled">Not Sure</string>
    <string name="game_date">Game Date</string>
    <string name="leave_the_game">Sorry, I can\'t attend</string>

    <!-- Fragment -->

    <string name="fragment_group">Teams</string>
    <string name="fragment_search">Join</string>
    <string name="fragment_game">Matches</string>


    <!-- admin Menu -->

    <string name="promote_as_captain">Promote as Captain</string>
    <string name="demote_as_player">Demote as Player</string>
    <string name="kick_out_group">Kick</string>
    <string name="exit_from_group">Exit</string>


    <!-- Sign -->
    <string name="to_create_activity">No account ? Create one</string>
    <string name="to_login">Already a member? Login</string>
    <string name="no_priv_to_create_game">No Privileges, check with captain</string>


    <!-- Tips -->

    <string name="tips">Tips</string>

    <string name="tip1_search">Enter Group name Or Group Tag you are looking for </string>
    <string name="tip2_search">You need key for join a Protected groups  </string>
    <string name="join_group">Join</string>

    <string name="need_to_login">Please sign in before</string>

    <!-- Error messages -->
    <string name="required_filed">Required</string>
    <string name="email">Email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_email">invalid email</string>


    <!-- Actions -->
    <string name="login">Login</string>
    <string name="no_account_create_one">No account ? Create one here</string>
    <string name="provide_required_information">Provide required information</string>


    <string name="captain">Captain</string>
    <string name="player">Player</string>
    <string name="logout">LogOut</string>



    <string name="ok">OK</string>
    <string name="cancel_join"> Cancel</string>
    <string name="date_passed">Verify Date may passed or  more then one month</string>
    <string name="no_player_required">Not enough players to start game minimum 4</string>


</resources>


