<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:gravity="center">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_note__24dp"
            android:drawableLeft="@drawable/ic_note__24dp"
            android:layout_marginBottom="25dp"
            android:text="@string/tips"
            android:textSize="16sp"
           />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/tip1_search"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.Design.Hint"
           />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/tip2_search"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.Design.Hint"
             />


    </LinearLayout>

</ScrollView>