<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_group"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_group_icon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@mipmap/ic_pick_group"
            android:layout_marginBottom="10dp"
            />



   </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_add_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/add_group_et_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_group_name"
                android:capitalize="none"
                android:inputType="textCapWords"
            />
        </android.support.design.widget.TextInputLayout>




        <android.support.v7.widget.SwitchCompat
            android:id="@+id/add_group_sw_is_protected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/hint_lock_group"
            app:showText="false"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_add_group_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp">

        <EditText
            android:id="@+id/add_group_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:visibility="invisible"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_add_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="10dp"
            android:text="@string/create_group"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/addGroupIndeterminateBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:layout_marginBottom="12dp" />


</LinearLayout>


</ScrollView>