<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_game"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_stadium_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

    <EditText
        android:id="@+id/AddGame_StadiumName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stadium_name"
        android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

    <EditText
        android:id="@+id/AddGame_et_stadium_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_required_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

    <EditText
        android:id="@+id/AddGame_et_required_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Required_number"
        android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_fees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

    <EditText
        android:id="@+id/AddGame_et_Fees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Fees"
        android:inputType="number" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/AddGame_et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="datetime" />
        </android.support.design.widget.TextInputLayout>





        <android.support.v7.widget.AppCompatButton
            android:id="@+id/AddGame_btn_CreateGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="10dp"
            android:text="@string/create_group"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent" />
    </LinearLayout>


</ScrollView>